SERVER-65930 DDL coordinators and rename participant initial checkpoint may incur in DuplicateKey error